# gem_rbx1_paper

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: overleaf-sync.yml
analyses/_template/: README.md  main.py
analyses/leaderboard/: README.md  main.py
analyses/overview/: README.md  main.py
data/: README.md  designs.csv  designs.fasta  designs.parquet  grand_metrics.csv
data/sensorgrams/: amber-bat-maple_rep01_spr.json  amber-bat-maple_rep02_spr.json  amber-bee-jade_rep01_spr.json  amber-bee-jade_rep02_spr.json  amber-bee-jade_rep03_spr.json  amber-bison-flint_rep01_spr.json  amber-bison-flint_rep02_spr.json  amber-bison-flint_rep03_spr.json  amber-boar-pearl_rep01_spr.json  amber-boar-pearl_rep02_spr.json  amber-boar-pearl_rep03_spr.json  amber-deer-opal_rep01_spr.json  amber-deer-opal_rep02_spr.json  amber-deer-opal_rep03_spr.json  amber-eagle-plume_rep01_spr.json  amber-eagle-plume_rep02_spr.json  amber-eagle-plume_rep03_spr.json  amber-heron-birch_rep01_spr.json  amber-heron-birch_rep02_spr.json  amber-heron-birch_rep03_spr.json  amber-mole-onyx_rep01_spr.json  amber-mole-onyx_rep02_spr.json  amber-mole-onyx_rep03_spr.json  amber-vole-ash_rep01_spr.json  amber-vole-ash_rep02_spr.json  amber-vole-ash_rep03_spr.json  azure-fox-ash_rep01_spr.json  azure-fox-ash_rep02_spr.json  azure-fox-ash_rep03_spr.json  azure-gecko-cedar_rep01_spr.json  (+916 more)
docs/: DATA.md
paper/: OVERLEAF.md  main.tex  references.bib
scripts/: __init__.py
theme/: README.md  __init__.py  matplotlibrc  mpl_theme.py  palettes.json
(+3595 files in other folders)
