[project]
name = "rbx1-gem-paper"
version = "0.1.0"
description = "Analyses, figures, and manuscript source for the GEM x Adaptyv 2026 RBX1 binder competition write-up."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyarrow>=15.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "biopython>=1.83",
    "python-levenshtein>=0.25",
    "loguru>=0.7",
    "tqdm>=4.66",
    "scikit-learn>=1.5",
    "typer>=0.12",
    "rich>=13.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "ipython>=8.26",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
